Blog Post: Group Actions

--- a/Notes/Week5/week5.tex
+++ b/Notes/Week5/week5.tex
@@ -369,5 +369,31 @@
 
 
 
+\section{Blog Post: Group Actions}
+\emph{From \textcite{bib:Calegari}.}
+\begin{itemize}
+    \item \marginnote{11/13:}Motivating group actions.
+    \begin{itemize}
+        \item We now address the "?" category in Table \ref{tab:setsBinaryops}.
+        \item $G=S_{52}$ is an incredibly huge group, yet it seems pretty manageable since we can write down any element and multiply two or more by hand, for instance, without too much difficulty. Why is this group with $52!$ elements so manageable? It seems like it has something to do with the set $X$ of 52 numbers that $S_{52}$ "moves around."
+        \item Similarly, $G=\text{GL}_n(\R)$ denotes the group of $n\times n$ invertible matrices but this set is made more manageable by understanding its action on $X=\R^n$.
+        \item In both cases, $G$ acts on $X$ in some sense. Elements of $G$ form bijective maps $g:X\to X$. Moreover, the group product corresponds to function composition.
+        \item Question: Can we find a suitable $X$ for any group $G$?
+        \item Hint: Look at $\text{Cu}$. There are several sets on which $\text{Cu}$ acts, each of which leads to a greater understanding of the group, itself.
+        \item Conclusion: In general, there will be many \emph{different} $X$ that we will want to consider, even when $G$ is the symmetric group.
+    \end{itemize}
+    \item $g\cdot(h\cdot x)=gh\cdot x$ is called a \textbf{compatibility property}.
+    \item Covers the Lemma and Proposition from class.
+    \item Examples of group actions.
+    \begin{itemize}
+        \item The trivial group action (see class notes).
+        \item If $G=\text{Cu}$ and $X$ is the set of inscribed tetrahedra, pairs of opposite faces, diagonals, faces, or edges, we get homomorphisms from $G$ to $S_2$, $S_3$, $S_4$, $S_6$, and $S_{12}$, respectively. Going even further, we can let $X$ be the disjoint union of the set of edges and faces to obtain a homomorphism from $G$ to $S_{18}$.
+        \item Consider $G=\text{SO}(3)$ and $X=\R^3$ or $X=S^2$ (the unit 2-sphere).
+        \item Consider $G=S_n$ and $\sigma=\{1,2,\dots,n\}$.
+    \end{itemize}
+\end{itemize}
+
+
+
 
 \end{document}
