--- a/preamble.tex
+++ b/preamble.tex
@@ -6,6 +6,7 @@
 \usepackage{scrextend}
 \usepackage[bottom]{footmisc}
 \usepackage[style=apa]{biblatex}
+\usepackage{xr}
 \usepackage{siunitx}
 \usepackage{tabu}
 \usepackage{tikz,graphicx}
